移除jar加载